crates/snapshot-tests/tests/snapshots/parser__table_9_invalid.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[DuplicateKey]: the key `taste` is defined multiple times in table at `fruit.apple`
  ┌─ table_9_invalid:6:14
  │
3 │ apple.taste.sweet = true
  │       ----- first key instance
  ·
6 │ [fruit.apple.taste]  # INVALID
  │              ^^^^^ duplicate key


error: the key `taste` is defined multiple times in table at `fruit.apple`
 --> table_9_invalid:6:14
  |
3 | apple.taste.sweet = true
  |       ----- first key instance
...
6 | [fruit.apple.taste]  # INVALID
  |              ^^^^^ duplicate key
Error {
    kind: "DuplicateKey",
    message: "duplicate key",
    span: 94..99,
    path: Some(
        "fruit.apple.taste",
    ),
}
